Ui fix: Set title and icon. align home page card content. fix assessment result UI and assessment form UI

--- a/src/components/cards/card-content.css
+++ b/src/components/cards/card-content.css
@@ -37,8 +37,12 @@
 }
 
 .col-4 {
+    width: 33%;
     flex-shrink: 2;
     justify-content: space-between;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: justify;
 }
 
 .image-row {
