--- a/src/components/view-assessment/index.css
+++ b/src/components/view-assessment/index.css
@@ -9,7 +9,7 @@
     border-radius: 15px;
     margin-right: 60px;
     background-color: #f2f2f2;
-    height:400px;
+    height:60%;
     width: 50%;
 
   }
